--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,15 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1><span class="highlight">Borafya 🩺 HealthTrack</span> Pro</h1>
+                <h1><span class="highlight">🩺 Borafya</span> Pro</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('health_tracker') }}">Health Tracker</a></li>
                     <li><a href="{{ url_for('treatment_guidelines') }}">Treatment Guidelines</a></li>
                     <li><a href="{{ url_for('health_goals_route') }}">Personal Health Goals</a></li>
                     <li><a href="{{ url_for('health_game') }}">Health Game</a></li>
                 </ul>
-            </nav>
             </nav>
         </div>
     </header>
